// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test user actions all should match snapshot 1`] = `
Object {
  "type": "FETCH_USERS_CANCEL",
}
`;

exports[`Test user actions all should match snapshot 2`] = `
Object {
  "payload": "error",
  "type": "FETCH_USERS_ERROR",
}
`;

exports[`Test user actions all should match snapshot 3`] = `
Object {
  "type": "FETCH_USERS_START",
}
`;

exports[`Test user actions all should match snapshot 4`] = `
Object {
  "payload": Array [],
  "type": "FETCH_USERS_SUCCESS",
}
`;
